--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,8 +16,9 @@
     "url": "https://github.com/mattelibe/Liberato-luglio-Esame/issues"
   },
   "homepage": "https://github.com/mattelibe/Liberato-luglio-Esame#readme",
-  "description": "",
   "dependencies": {
     "express": "^4.16.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
